# vc

./: .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt  test.vhd
CMake/: CatchAddTests.cmake  FindCatch2.cmake  Findfmt.cmake  LibFindMacros.cmake  ParseAndAddCatchTests.cmake
contrib/: autoload.py  printers.py  register.py
include/AST/: Decl.h  Expr.h  Identifier.h  Stmt.h  Type.h
include/Common/: CharInfo.h  LibraryManager.h  MemoryBuffer.h  OperatorPrecedence.h  Rewriter.h  SourceLocation.h  SourceManager.h  StringRef.h  TextBuffer.h  TokenKinds.def  TokenKinds.h  VirtualFileSystem.h
include/Diag/: Diagnostic.h  DiagnosticConsumer.h  DiagnosticEngine.h  DiagnosticsAll.def
include/Format/: Format.h  FormatTypes.h
include/Lexer/: Lexer.h  Token.h
include/Parse/: Context.h  DiagnosticsLex.def  DiagnosticsLex.h  DiagnosticsParse.def  DiagnosticsParse.h  Lexer.h  Parser.h  ParserResult.h  Token.h  TokenKinds.def  TokenKinds.h
include/Support/: ConfigFolders.h  FileSystem.h  SourceEdit.h  StringMap.h
lib/: CMakeLists.txt
lib/Common/: CharInfo.cpp  MemoryBuffer.cpp  OperatorPrecedence.cpp  SourceManager.cpp  SourceManager.h  StringRef.cpp  TextBuffer.cpp  TokenKinds.cpp
lib/Diag/: Diagnostic.cpp  DiagnosticEngine.cpp
lib/Format/: CMakeLists.txt  ContinuationIntender.h  EditManager.cpp  EditManager.h  Format.cpp  FormatCalculator.cpp  FormatCalculator.h  FormatLineFormater.cpp  FormatLineFormater.h  FormatLineParser.cpp  FormatLineParser.h  FormatToken.h  FormatTokenIndenter.cpp  FormatTokenIndenter.h  FormatTokenLexer.cpp  FormatTokenLexer.h
lib/Lexer/: Lexer.cpp
lib/Parse/: Lexer.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseName.cpp  ParseNames.cpp  ParseStmt.cpp  ParseType.cpp  ParseUnit.cpp  Parser.cpp  TokenKinds.cpp
lib/Parser/: Parse.cpp
lib/Support/: FileSystem.cpp  SourceEdit.cpp  StringMap.cpp
lib/Support/ConfigFolders/: ConfigFoldersPosix.cpp  ConfigFoldersWin32.cpp
tests/: CMakeLists.txt  format_test.cpp  lexer_test.cpp  stdio_test.cpp  test.cpp  test.vhd
tests/common/matcher/: MemoryBufferMatcher.h
tests/unit/Common/: TextBuffer.cpp
tests/unit/Support/: MemoryFileSystemTest.cpp  StringMapTest.cpp  StringMapTests.cpp  SupportTestsMain.cpp
