add_library(vc
    Common/MemoryBuffer.cpp
    Common/SourceManager.cpp
    Common/CharInfo.cpp
    Common/TokenKinds.cpp
    Diag/Diagnostic.cpp
    Diag/DiagnosticEngine.cpp
    Parse/Token.cpp
    Parse/Lexer.cpp
    Parse/Parser.cpp
    Parse/ParseName.cpp
    Parse/ParseExpr.cpp
    Parse/ParseType.cpp
    Parse/ParseStmt.cpp
    Parse/ParseDecl.cpp
    Parse/ParseUnit.cpp
)